Adjusted libraries scripts

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.1.2.js"></script>
+    <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
+    <!-- <script src="http://dimplejs.org/dist/dimple.v2.1.2.js"></script> -->
+    <script src="./lib/d3.v3.min.js"></script>
+    <script src="./lib/dimple.v2.1.2.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 
