--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
     <!-- <script src="http://d3js.org/d3.v3.min.js"></script> -->
     <!-- <script src="http://dimplejs.org/dist/dimple.v2.1.2.js"></script> -->
-    <script src="./lib/d3.v3.min.js"></script>
-    <script src="./lib/dimple.v2.1.2.js"></script>
+    
+    <!-- <script src="./lib/d3.v3.min.js"></script> -->
+    <!-- <script src="./lib/dimple.v2.1.2.js"></script> -->
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.v3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.1.2/dimple.latest.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 
